// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new items - 2 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "South of the Border, West of the Sun",
      "price": 25,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "Maximum City",
  },
]
`;

exports[`can add new items 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "Maximum City",
      "price": 25,
    },
  ],
}
`;

exports[`can add new items 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "South of the Border, West of the Sun",
        "price": 25,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Maximum City",
        "price": 25,
      },
    ],
  },
]
`;
